# unical

./: .envrc  .gitignore  .tmuxp.yaml  AGENTS.md  content.config.ts  nuxt.config.ts  package-lock.json  package.json  shell.nix  wrangler.jsonc
.python/: .envrc  pyproject.toml  shell.nix  shell.simple.nix
.python/src/unical/: __init__.py
app/: app.config.ts  app.vue
app/assets/css/: main.css
app/components/: Footer.vue  Header.vue
app/components/Semestre/: Agente.vue  Container.vue  Data.vue  Dia.vue  Evento.vue  Extra.vue  ExtraEsquerdo.vue  Icone.vue  ListaEventos.vue  Localidade.vue  Mes.vue  Nav.vue
app/pages/: index.vue  semestres.vue  semestres.vue.old
app/pages/semestre/: [...slug].vue
app/semestres/: [...slug].vue
app/utils/: agrupar_eventos.js  evento_inclui_semestre.js  eventos_hoje.js
content/semestres/: 2025.1.yaml  2025.2.yaml  2026.1.yaml
